2006-07-18  Wakaba  <wakaba@suika.fam.cx>

	* submit-by-enter-1.html, submit-by-enter-2.html: New tests.
	See <http://knoa.jp/memo/?id=2006-07-18+17:26> and
	<http://suika.fam.cx/~wakaba/d/d200607#d18-1>.

	* ChangeLog: New file.
