@@ -1,3 +1,7 @@
+2006-07-20  Wakaba  <wakaba@suika.fam.cx>
+
+	* submit-by-enter-1a.html, submit-by-enter-2a.html: New tests.
+
 2006-07-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* submit-by-enter-1.html, submit-by-enter-2.html: New tests.
